# MOON_OFICIAL

./: Cargo.toml  Cargo.toml.bak  burn_event_2025-11-26_214042.json  explorer.sh  moon-linux-x86_64  ngrok.html  test_utxo.rs  test_wallet.rs
.github/workflows/: release.yml
bins/: test_wallet.rs
moon_core/: Cargo.toml
moon_core/src/: genesis_checkpoints.rs  mine.rs
moon_full_node/: Cargo.toml
moon_full_node/src/: main.rs
src/: moon_encrypted.json
utxo_test/: IDENTITY  LOG
wallet-web/: index.html
